gis collapse fixed

--- a/dhis-2/dhis-web/dhis-web-mapping/src/main/webapp/dhis-web-mapping/app/styles/style.css
+++ b/dhis-2/dhis-web/dhis-web-mapping/src/main/webapp/dhis-web-mapping/app/styles/style.css
@@ -11,6 +11,7 @@
  * Window
  * TextField
  * Checkbox
+ * NumberField
 */
 
 /* General */
@@ -501,4 +502,11 @@ html * {
     background-image: url('../images/checkbox.gif');
     cursor: pointer;
     cursor: hand;
+}
+
+/* TextField */
+
+.gis-numberfield input.x-form-text {
+	border-top-left-radius: 2px;
+	border-bottom-left-radius: 2px;
 }
